# computational-workshop

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
condition_numbers/: Cargo.toml
condition_numbers/src/: condition.rs  examples.rs  lib.rs  main.rs
eigenvalues_partial_problem/: Cargo.toml
eigenvalues_partial_problem/src/: lib.rs  main.rs
eigenvalues_problem/: Cargo.toml
eigenvalues_problem/src/: choose_max.rs  gershgorin.rs  lib.rs  main.rs
grid_method/: Cargo.toml
grid_method/src/: lib.rs  main.rs
heat_equation/: Cargo.toml
heat_equation/src/: lib.rs  main.rs
iterative_methods/: Cargo.toml
iterative_methods/src/: lib.rs  main.rs
matrices/: Cargo.toml
matrices/src/: examples.rs  lib.rs
matrix_solver/: Cargo.toml
matrix_solver/src/: lib.rs  main.rs
optimization/: Cargo.toml
optimization/src/: lib.rs  main.rs
projection_methods/: Cargo.toml
projection_methods/src/: lib.rs  main.rs
qr_decomposition/: Cargo.toml
qr_decomposition/src/: lib.rs  main.rs
