[package]
name = "eigenvalues_problem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["approx"] }
ndarray-linalg = { version = "0.16", features = ["openblas"] }
matrices = { path = "../matrices" }
prettytable-rs = "0.10"
