[package]
name = "matrix_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
condition_numbers = { path = "../condition_numbers" }
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16", features = ["openblas"] }
matrices = { path = "../matrices" }
assert_approx_eq = "1.1.0"
